--- a/index.html
+++ b/index.html
@@ -5,10 +5,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>assignment</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="#" type="image/x-icon">
 </head>
 
 <body>
+    <div class="secsion1">
+        <div class="about-me">
+            <h1>Become a developer by<span>Programming Hero</span></h1>
+            <p>I want to be a web developer. Programming Hero company always guides me. As a beginner, I am very
+                excited. I will try my best.</p>
+            <button class="button"><a href="#">About Me</a></button>
+            <p>Scroll down for more details</p>
+        </div>
+        <div>
+            <div>
+                <img src="images/person/person-3.png" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="secsion2">
+        <div>
+            <h2>My Steps for Goal bin 2022</h2>
+        </div>
+        <div class="steps">
+            <div id="step1">
+                <div>
+                    <img src="images/illustrators/illustrator-1.png" alt="">
+                </div>
+                <div>
+                    <h4>Learning</h4>
+                    <p>I want to learn very attentive government. I'm trying to learn the way the instructor is
+                        teaching me. Trying to apply my maximum talent.</p>
+                </div>
+            </div>
+            <div id="step2">
+                <div>
+                    <img src="images/illustrators/illustrator-2.png" alt="">
+                </div>
+                <div>
+                    <h4>Practic</h4>
+                    <p>I am giving enough time for web-development. And I'm practicing a lot. I am spending my whole
+                        time for this course.</p>
+                </div>
+            </div>
+            <div id="step3">
+                <div>
+                    <img src="images/illustrators/illustrator-3.png" alt="">
+                </div>
+                <div>
+                    <h4>Output</h4>
+                    <p>I want to be a web development. I will try hard enough to reach my destination. I have to
+                        reach my destination anyway.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="secsion3">
+        <div>
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div>
+            <h3>There is no age to learn</h3>
+            <p>There is no set age for learning anything. Anything can be learned at any age. Everything can be learned
+                if there is interest in learning. It is important to make time for learning.</p>
+            <button><a download="download" href="#">Download CV</a></button>
+        </div>
+    </div>
+
 
 </body>
 
