--- a/index.html
+++ b/index.html
@@ -11,70 +11,89 @@
 </head>
 
 <body>
-    <div class="secsion1">
-        <div class="about-me">
-            <h1>Become a developer by<span>Programming Hero</span></h1>
-            <p>I want to be a web developer. Programming Hero company always guides me. As a beginner, I am very
-                excited. I will try my best.</p>
-            <button class="button"><a href="#">About Me</a></button>
-            <p>Scroll down for more details</p>
+    <div class="section1">
+        <div class="left-sight">
+            <div class="head-line">
+                <h1 class="color-olive">Become a developer by</h1>
+                <h1 class="color-206F75">Programming Hero</h1>
+            </div>
+            <div class="pragraph">
+                <p>I want to be a web developer. Programming Hero company always guides me. As a beginner, I am very
+                    excited. I will try my best.</p>
+                <button class="button"><a href="#">About Me</a></button>
+                <p>Scroll down for more details</p>
+            </div>
         </div>
-        <div>
-            <div>
+        <div class="right-sight">
+            <div class="image">
                 <img src="images/person/person-3.png" alt="">
             </div>
         </div>
     </div>
-    <div class="secsion2">
-        <div>
-            <h2>My Steps for Goal bin 2022</h2>
-        </div>
+    <div class="section2">
+        <h2 class="color-olive">My Steps for Goal in <span class="color-206F75">2022</span></h2>
         <div class="steps">
             <div id="step1">
-                <div>
+                <div class="icon">
                     <img src="images/illustrators/illustrator-1.png" alt="">
                 </div>
-                <div>
-                    <h4>Learning</h4>
-                    <p>I want to learn very attentive government. I'm trying to learn the way the instructor is
-                        teaching me. Trying to apply my maximum talent.</p>
-                </div>
+                <h4 class="h4font">Learning</h4>
+                <p class="pragraph">I want to learn very attentive government. I'm trying to learn the way the
+                    instructor is
+                    teaching me. Trying to apply my maximum talent.</p>
             </div>
             <div id="step2">
-                <div>
+                <div class="icon">
                     <img src="images/illustrators/illustrator-2.png" alt="">
                 </div>
-                <div>
-                    <h4>Practic</h4>
-                    <p>I am giving enough time for web-development. And I'm practicing a lot. I am spending my whole
-                        time for this course.</p>
-                </div>
+                <h4 class="h4font">Practic</h4>
+                <p class="pragraph">I am giving enough time for web-development. And I'm practicing a lot. I am spending
+                    my whole
+                    time for this course.</p>
             </div>
             <div id="step3">
-                <div>
+                <div class="icon">
                     <img src="images/illustrators/illustrator-3.png" alt="">
                 </div>
                 <div>
-                    <h4>Output</h4>
-                    <p>I want to be a web development. I will try hard enough to reach my destination. I have to
+                    <h4 class="h4font">Output</h4>
+                    <p class="pragraph">I want to be a web development. I will try hard enough to reach my destination.
+                        I have to
                         reach my destination anyway.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="secsion3">
-        <div>
+    <div class="section3">
+        <div class="sec3img">
             <img src="images/pictures/coding.png" alt="">
         </div>
-        <div>
+        <div class="sec3pra">
             <h3>There is no age to learn</h3>
-            <p>There is no set age for learning anything. Anything can be learned at any age. Everything can be learned
+            <p class="pragraph">There is no set age for learning anything. Anything can be learned at any age.
+                Everything can be
+                learned
                 if there is interest in learning. It is important to make time for learning.</p>
-            <button><a download="download" href="#">Download CV</a></button>
+            <button class="button"><a download="download" href="#">Download CV</a></button>
         </div>
     </div>
+    <div class="section4">
+        <div class="sec4pra">
+            <h3>About Programming Hero</h3>
+            <p class="pragraph">Programming Hero is a beautiful company. From here I want to learn web development much
+                better. I
+                hope I
+                can reach my destination. It is taught in such a beautiful way that we can learn very easily.</p>
+            <button class="button"><a href="#">Contact Me</a></button>
+        </div>
+        <div class="sec4img">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </div>
+    <div class="section4">
 
 
+    </div>
 </body>
 
 </html>
