--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="section1">
         <div class="left-sight">
             <div class="head-line">
-                <h1 class="color-olive">Become a developer by</h1>
+                <h1 class="color-olive">Become a Developer by</h1>
                 <h1 class="color-206F75">Programming Hero</h1>
             </div>
             <div class="pragraph">
