--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="#" type="image/x-icon">
+    <link rel="shortcut icon" href="images/pictures/icon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -20,7 +20,8 @@
             <div class="pragraph">
                 <p>I want to be a web developer. Programming Hero company always guides me. As a beginner, I am very
                     excited. I will try my best.</p>
-                <button class="button"><a href="#">About Me</a></button>
+                <button class="button"><a href="https://www.linkedin.com/in/partho-adhikary-b692b6217/">About
+                        Me</a></button>
                 <p>Scroll down for more details</p>
             </div>
         </div>
@@ -74,7 +75,8 @@
                 Everything can be
                 learned
                 if there is interest in learning. It is important to make time for learning.</p>
-            <button class="button"><a download="download" href="#">Download CV</a></button>
+            <button class="button"><a download="download" href="download/Partho Adhikary_cv.pdf">Download
+                    CV</a></button>
         </div>
     </div>
     <div class="section4">
@@ -84,7 +86,7 @@
                 better. I
                 hope I
                 can reach my destination. It is taught in such a beautiful way that we can learn very easily.</p>
-            <button class="button"><a href="#">Contact Me</a></button>
+            <button class="button"><a href="https://www.facebook.com/partho.adhikary.150">Contact Me</a></button>
         </div>
         <div class="sec4img">
             <img src="images/pictures/project.png" alt="">
