--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <div class="pragraph">
                 <p>I want to be a web developer. Programming Hero company always guides me. As a beginner, I am very
                     excited. I will try my best.</p>
-                <button class="button"><a href="https://www.linkedin.com/in/partho-adhikary-b692b6217/">About
+                <button class="button"><a target="_blank"
+                        href="https://www.linkedin.com/in/partho-adhikary-b692b6217/">About
                         Me</a></button>
                 <p>Scroll down for more details</p>
             </div>
@@ -86,7 +87,8 @@
                 better. I
                 hope I
                 can reach my destination. It is taught in such a beautiful way that we can learn very easily.</p>
-            <button class="button"><a href="https://www.facebook.com/partho.adhikary.150">Contact Me</a></button>
+            <button class="button"><a target="_blank" href="https://www.facebook.com/partho.adhikary.150">Contact
+                    Me</a></button>
         </div>
         <div class="sec4img">
             <img src="images/pictures/project.png" alt="">
