--- a/index.html
+++ b/index.html
@@ -100,6 +100,48 @@
             <img src="images/pictures/project.png" alt="">
         </div>
     </div>
+    <div class="section5">
+        <div class="steps">
+            <div id="sec5-text-step">
+                <h1 id="list-letter">T <br> O <br> P <br> <br> F <br> E <br> A <br> T <br> U <br> R
+                    <br> E
+                </h1>
+            </div>
+            <div id="sec5-step1">
+                <div class="sec5-icon">
+                    <img src="images/illustrators/guides.png" alt="">
+                </div>
+                <div>
+                    <h4 class="h4font">Learning</h4>
+                    <p class="pragraph">I want to learn very attentive government. I'm trying to learn the way the
+                        instructor is
+                        teaching me. Trying to apply my maximum talent.</p>
+                </div>
+            </div>
+            <div id="sec5-step2">
+                <div class="sec5-icon">
+                    <img src="images/illustrators/developer.png" alt="">
+                </div>
+                <h4 class="h4font">Practic</h4>
+                <p class="pragraph">I am giving enough time for web-development. And I'm practicing a lot. I am spending
+                    my whole
+                    time for this course.</p>
+            </div>
+            <div id="sec5-step3">
+                <div class="sec5-icon">
+                    <img src="images/illustrators/productive.png" alt="">
+                </div>
+                <div>
+                    <h4 class="h4font">Output</h4>
+                    <p class="pragraph">I want to be a web development. I will try hard enough to reach my destination.
+                        I have to
+                        reach my destination anyway.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <footer>
         <div class="footer">
             <h1>Assignment <span>2022</span></h1>
