--- a/index.html
+++ b/index.html
@@ -112,30 +112,26 @@
                     <img src="images/illustrators/guides.png" alt="">
                 </div>
                 <div>
-                    <h4 class="h4font">Learning</h4>
-                    <p class="pragraph">I want to learn very attentive government. I'm trying to learn the way the
-                        instructor is
-                        teaching me. Trying to apply my maximum talent.</p>
+                    <h4 class="h4font">Candidate Guides</h4>
+                    <p class="pragraph">We shortlist and pre-assess resumes and candidates based on your unique needs.
+                    </p>
                 </div>
             </div>
             <div id="sec5-step2">
                 <div class="sec5-icon">
                     <img src="images/illustrators/developer.png" alt="">
                 </div>
-                <h4 class="h4font">Practic</h4>
-                <p class="pragraph">I am giving enough time for web-development. And I'm practicing a lot. I am spending
-                    my whole
-                    time for this course.</p>
+                <h4 class="h4font">Futuristic Developer</h4>
+                <p class="pragraph">Hire energetic Developers who are challenge takers and a quick learner.</p>
             </div>
             <div id="sec5-step3">
                 <div class="sec5-icon">
                     <img src="images/illustrators/productive.png" alt="">
                 </div>
                 <div>
-                    <h4 class="h4font">Output</h4>
-                    <p class="pragraph">I want to be a web development. I will try hard enough to reach my destination.
-                        I have to
-                        reach my destination anyway.</p>
+                    <h4 class="h4font">Productive team</h4>
+                    <p class="pragraph">Build high performing teams crafted just for you with the right fit for your
+                        specific requirements.</p>
                 </div>
             </div>
         </div>
